MFC r321921: Add compat shim part missed at r305197.

This fixes compatibility between old kernel and new ZFS tools.
It seems to be tradition to forget it.

PR:		221112

Former-commit-id: af03b9e32a0181d5dff8efcd20d4e15d3982d838