cddl/contrib/opensolaris/lib/libzfs/common/libzfs_compat.c
@@ -183,6 +183,14 @@ name|zfs_ioctl_version
 condition|)
 block|{
 case|case
+name|ZFS_IOCVER_INLANES
+case|:
+name|cflag
+operator|=
+name|ZFS_CMD_COMPAT_INLANES
+expr_stmt|;
+break|break;
+case|case
 name|ZFS_IOCVER_RESUME
 case|:
 name|cflag
